--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,9 @@ a:hover {
 }
 
 .bg-primary {
+  background: #C7B2A7 !important;
+}
+.bg-primary-1 {
   background: url('../images/backgrounds/still-life-fashion-designer-s-office.jpg') no-repeat center center;
   background-size: cover;
   -webkit-background-size: cover; /* Compatibilidad con navegadores más antiguos */
@@ -228,8 +231,6 @@ a:hover {
   -o-background-size: cover;
   background-attachment: fixed; /* Mantiene la imagen fija al hacer scroll */
 }
-
-
 .bg-gray {
   background: #eaeaea !important;
 }
