--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ body {
   color: #4c4c4c;
 }
 
+  html {
+    scroll-behavior: smooth;
+  }
+  
+
 p, .paragraph {
   font-weight: 400;
   color: #4c4c4c;
@@ -188,6 +193,10 @@ a:hover {
 }
 .section-title {
   margin-bottom: 80px;
+  font-family: "Playfair Display", serif;
+}
+.section-title-sobremi {
+  margin-bottom: 10px;
   font-family: "Playfair Display", serif;
 }
 
@@ -553,16 +562,21 @@ textarea.form-control {
   }
 }
 .banner-section {
-  background: linear-gradient(135deg, #C7B2A7, #DB89C7);
+  background: url('../images/spring-wardrobe-switch-still-life.jpg') no-repeat center center;
+  background-size: cover;
+  background-attachment: fixed;
   color: #fff;
   padding: 100px 0;
   text-align: center;
 }
 
+
+
 .banner-title {
   font-size: 2.5rem;
   font-family: "Playfair Display", serif;
   margin-bottom: 20px;
+  color: white;
 }
 
 .banner-text {
@@ -571,6 +585,7 @@ textarea.form-control {
   line-height: 1.6;
   max-width: 800px;
   margin: 0 auto;
+ color: white; 
 }
 
 .banner-button {
